--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,20 @@
 <form method="get" action="/quizes/<%= quiz.id %>/answer">
 Pregunta: <%= quiz.pregunta %> <p>
 Tema: <%= quiz.tema %> <p>
-<input type="test" name="respuesta" value="Responda aquí"/>
+<input type="text" name="respuesta" value="Respuesta"/>
 <input type="submit" value="Enviar">
+</form>
 
+<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo Comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<%for(index in quiz.Comments){%>
+ <%if(quiz.Comments[index].publicado || session.user){%>
+ 	<p>- <%=quiz.Comments[index].texto%>
+		<%if(session.user && !quiz.Comments[index].publicado){%>
+			<a href="/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id%>/publish">
+					<button>Publicar</button></a>
+		<%}%>
+	</p>
+ <%}%>	
+<%}%>
